# quipu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS-retrieval.txt  REQUIREMENTS-vec.txt  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: gen_demo.py
core/hooks/: quipu-capture.sh  quipu-mirror.sh
core/templates/: gitignore.tmpl
docs/: BUGS-v0.3.3.md  USER_GUIDE.md
hub/: Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  main.py  models.py  store.py
hub/deploy/: RUNBOOK.md  quipu-hub.service.example  setup.sh
hub/middleware/: __init__.py  audit.py  auth.py  ratelimit.py  size_limit.py
hub/routes/: __init__.py  health.py  oplog.py
hub/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_contract_drift.py  test_cursor_defense.py  test_health.py  test_oplog_roundtrip.py  test_pull_pagination.py  test_ratelimit.py  test_security_caps.py  test_zero_knowledge.py
quipu/: __init__.py  __main__.py  cli.py  config.py  server.py
quipu/behavior/: __init__.py  prime.py
quipu/capture/: __init__.py  drain.py  secrets.py
quipu/crypto/: __init__.py  _blind.py  _cipher.py  _kdf.py  errors.py
quipu/db/: __init__.py  migrate.py
quipu/embeddings/: REQUIREMENTS-embed.txt  __init__.py  engine.py  tokenizer.py
quipu/extraction/: __init__.py  local.py
quipu/invalidation/: __init__.py  cosine.py
quipu/keystore/: __init__.py  _backend.py  (+2 more)
scripts/: bake_version.py  install-quipu-global.sh  publish.bat
tests/: _semantic.py  conftest.py  test_config.py  test_semantic_support.py
(+126 files in other folders)
