[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quipu-mcp"
version = "0.3.0"
description = "Quipu local-first agent memory system with MCP server."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10,<2",
    "onnxruntime~=1.20",
    "tokenizers~=0.21",
    "numpy~=2.1",
    "argon2-cffi>=23.1,<24",
    "cryptography>=42,<46",
    "keyring>=24,<26",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1.6"]

[project.scripts]
quipu = "quipu.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quipu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
